fixing boostrap grid and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,14 +17,28 @@ body
     background-attachment: fixed;
     height: auto;
 }
+#instruction, #stats 
+{
+    margin: 10px;
+    padding: 10px;
+    align-content: center;
+}
+.title
+{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    
+}
 h1 
 {
-    font-size: 20px;
-    color: black;
+    font-size: 14px;
+    color: goldenrod;
     padding: 1px;
     text-align:center;
     margin-bottom: 50px;
-    font-family: 'Rubik Mono One', sans-serif;
+    font-family: 'Press Start 2P', cursive;
 
 } 
 h2 
@@ -32,12 +46,10 @@ h2
     padding: 10px;
     margin: 10px;
     text-align: center;
-    font-size: 24px;
-    color: black; 
+    font-size: 18px;
+    color: red; 
 }
-#instruction, #stats {
-    color: white;
-}
+
 #ahri, #annie, #aatrox, #azir, #blitzcrank, #draven,
 #fiddlesticks, #garen, #jihn, #jinx
 {
